[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7.5"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Solana - Use specific versions that work with Anchor 0.29.0
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"

# Anchor - Use 0.29.0
anchor-client = "0.29.0"
anchor-lang = "0.29.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment and config
dotenv = "0.15"
dirs = "5.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
futures = "0.3"
async-trait = "0.1"
